--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,13 @@ repos:
     rev: v5.0.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^src/static/
       - id: end-of-file-fixer
+        exclude: ^src/static/
       - id: check-yaml
+        exclude: ^src/static/
       - id: check-added-large-files
+        exclude: ^src/static/
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
@@ -13,12 +17,14 @@ repos:
       - id: black
         language_version: python3
         args: [ "--line-length=120" ]
+        exclude: ^src/static/
 
   - repo: https://github.com/pycqa/isort
     rev: 6.0.1
     hooks:
       - id: isort
         args: [ "--profile", "black", "--line-length", "120" ]
+        exclude: ^src/static/
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.2.0
@@ -29,9 +35,11 @@ repos:
           'flake8-comprehensions',
         ]
         args: [ "--max-line-length=120" ]
+        exclude: ^src/static/
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.15.0
     hooks:
       - id: mypy
         additional_dependencies: [ types-requests ]
+        exclude: ^src/static/
