--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "opuslib>=3.0.0",
     "opencv-python>=4.8.0",
     "aiortc>=1.13.0",
-    "xiaozhi-sdk>=0.1.1",
+    "xiaozhi-sdk>=0.2.0",
 ]
 
 [project.optional-dependencies]
@@ -37,9 +37,9 @@ build-backend = "hatchling.build"
 packages = ["src"]
 
 [tool.uv]
+index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 dev-dependencies = [
     "pytest>=7.0",
     "black>=23.0",
     "flake8>=6.0"
 ]
-
