--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
     # build: .
     image: dairoot/xiaozhi-webrtc:latest
     ports:
-      - "8083:8083"
+      - "${PORT:-51000}:${PORT:-51000}"
     volumes:
       - ./:/app/
     network_mode: "host"
+    environment:
+      - PORT=${PORT:-51000}
